add more tables in results section

--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -204,13 +204,27 @@ Table \ref{tab-areas} shows the mass of PBB-77 and `2-\ce{HCH} that was added to
 	\hfill \\
 	\begin{tabular}{|c|c|}
 		\hline
-		Mass of PBB-77 /\si{\mu{}g} & Mass of ‘2-\ce{HCH}/\si{\mu{}g}  \\ \hline
-	    \num{1.90e-04}                   & \num{4.76e-03}                          \\ \hline
+		Mass of PBB-77 /\si{\mu{}g}      & Mass of ‘2-\ce{HCH}/\si{\mu{}g}    \\ \hline
+	    \num{1.90e-04}                   & \num{4.76e-03}                     \\ \hline
 	\end{tabular}
 	\label{tab-areas}
 \end{table}
 
+Table \ref{tab-recovery} shows the recovery rate of the internal standard, PBB-77, in each fish sample.
 
+\begin{table}[h!]
+	\centering
+	\caption{Recovery rate of PBB-77 in each fish sample}
+	\hfill \\
+	\begin{tabular}{|c|c|c|}
+		\hline
+		Fish sample        & Mass of PBB-77 recovered/\si{\mu{}g} & Actual Recovery Rate/\% \\ \hline
+		1 (first run)      & \num{4.90e-05}                             & 25.72                   \\ \hline
+		1 (second run)     & \num{4.99e-05}                             & 26.22                   \\ \hline
+		2 (first run)      & \num{8.38e-05}                             & 44.04                   \\ \hline
+		2 (second run)     & \num{7.60e-05}                             & 39.90                   \\ \hline
+	\end{tabular}
+\end{table}
 
 \subsection{Discussion}
 \begin{itemize}
