calculations section is completed

--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -266,25 +266,11 @@ Table \ref{tab-recovery} shows the recovery rate of the internal standard, PBB-7
 				\frac{\num{2.59e-9}}{\num{4.14e-09}} = \num{6.27e-1}
 		\end{gather*}
 
-	\item[Calculating the response factor] \hfill \\
-		\begin{equation} \label{response-factor}
-			\begin{split}
-				\frac{\textit{Area of Analyte Signal}}{\textit{Concentration of Analyte}} & = F\Bigg(\frac{\textit{Area of Standard Signal}}{\textit{Concentration of Standard}}\Bigg) \\
-				\frac{A_X}{[X]} & = F\Bigg(\frac{A_S}{[S]}\Bigg)
-			\end{split}
-		\end{equation}
-		Equation \ref{response-factor} was taken from \cite{harris}, where $[X]$ and $[S]$ represent the concentrations of analyte and of the standard, respectively.
-
-	\item[Calculating the capacity factor of chlorobenzene for figure 2 of the chromatogram] \hfill \\
-		\begin{equation} \label{equ-capacity-factor}
-			\begin{split}
-				K & = \frac{t_r - t_m}{t_m} \\
-				K & = \frac{2.343 - 1.438}{1.438} \\
-				K & = \frac{0.905}{1.438} \\
-				K & = 0.629346 \approx 0.629
-			\end{split}
-		\end{equation}
-		Equation \ref{equ-capacity-factor} was taken from \cite{harris}.
+	\item[Actual recovery rate of internal standard, PBB-77, for the first run of fish sample 1] \hfill \\
+		\begin{gather*}
+			\textit{Actual Recovery Rate} = \frac{\textit{Mass}_{IS_{recovered}}}{\textit{Mass}_{IS_{added}}} \\
+			\frac{\num{4.90e-5}}{\num{2.21e1}} = 25.72\%
+		\end{gather*}
 
 \end{description}
 
