add tables of s/n and rsd

--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -91,6 +91,8 @@ In the last week of the experiment, a calibration solution was produced by addin
 \section{Results and Discussion}
 
 \subsection{Results}
+All of the GC/EI MS chromatograms are located in the `Chrmoatograms' subsection in the `Appendix' section, and all them are appropriately labelled.
+
 Table \ref{tab-para} shows the parameters that was set in the GC/EI-MS and the mass of the ions that was monitored.
 
 \begin{table}[h!]
@@ -226,6 +228,38 @@ Table \ref{tab-recovery} shows the recovery rate of the internal standard, PBB-7
 	\end{tabular}
 	\label{tab-recovery}
 \end{table}
+
+Table \ref{tab-mean} shows the average concentration of BDE-47 in fish oil. The table also shows the relative standard deviation of the concentration as well.
+
+\begin{table}[h!]
+	\centering
+	\caption{The mean, standard deviation, and relative standard deviation of BDE-47 in fish oil in both of the samples}
+	\hfill \\
+	\begin{tabular}{|c|c|c|c|}
+		\hline
+		Fish sample & Mean of BDE-47 in fish oil/(\si{\mu{}g/g}) & Std. Dev./(\si{\mu{}g/g}) & Relative Std. Dev./\% \\ \hline
+		1           & \num{1.47e-05}                             & \num{1.57e-07}            & 1.07                  \\ \hline
+		2           & \num{1.66e-05}                             & \num{2.28e-06}            & 13.75                 \\ \hline
+	\end{tabular}
+	\label{tab-mean}
+\end{table}
+
+Table \ref{tab-sn} shows the average signal-to-noise ratio of BDE-47 in the fish samples.
+
+\begin{table}[h!]
+	\centering
+	\caption{Average signal-to-noise ratio of BDE-47 in the fish samples}
+	\hfill \\
+	\begin{tabular}{|c|c|}
+		\hline
+		Fish sample & Signal-to-Noise ratio    \\ \hline
+		1           & 93.65                    \\ \hline
+		2           & 7.27                     \\ \hline
+	\end{tabular}
+	\label{tab-sn}
+\end{table}
+
+
 
 \subsection{Discussion}
 
