add pics of compounds, and complete abstract

--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -13,14 +13,14 @@
 \usepackage{geometry}
 \geometry{margin=1in}
 \usepackage{textcomp}
-% \usepackage{graphicx}
-% \graphicspath{ {./images/} }
+\usepackage{graphicx}
+\graphicspath{ {./images/} }
 
 %----------------------------------------------------------------------------------------
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\title{Analysis and Quantification of 2,2',4,4'-Tetrabromodiphenyl Ether using Gas Chromatography Coupled with a Low-Resolution Mass Spectrometry \\ CHEM 4303 \\ Analytical Separations} % Title
+\title{Analysis and Quantification of 2,2',4,4'-Tetrabromodiphenyl Ether using Gas Chromatography - Electron Ionization, Coupled with a Low-Resolution Mass Spectrometry in the Selected Ion Monitoring \\ CHEM 4303 \\ Analytical Separations} % Title
 
 \author{Robby \textsc{Renz}} % Author name
 
@@ -44,7 +44,7 @@
 %----------------------------------------------------------------------------------------
 
 \begin{abstract}
-	Gas chromatography with a mass spectrometer was utilized for analysis.
+	Gas chromatography - electron ionization mass spectrometry in the selected ion monitoring (GC/EI-MS-SIM) was used to detect and quantify the amount of BDE-47 in fish oil. Initially, the mass spectrum and total ion chromatogram was obtained for the analyte in question, BDE-47, the internal standard PBB-77 and the recovery standard `2-\ce{HCH}. Afterwards, 2 samples of fish oil was prepared using solid-phase extraction. Finally, the fish samples, blanks, BDE-47, PBB-77 and `2-\ce{HCH} underwent GC/EI-MS-SIM analysis, in which the ions being monitored were at a m/z of 326 and 486 for BDE-47, 470 and 310 for PBB-77, and 181 and 219 for `2-\ce{HCH}. Through calculations, it was realized that the average concentration of BDE-47 in the first sample of fish oil was  \SI{1.47e-5}{\ug/g} \num{+-1.07}\%, while the second sample of fish oil had a BDE-47 concentration of \SI{1.66e-5}{\ug/g} \num{+-13.75}\%.
 \end{abstract}
 \newpage
 
@@ -262,6 +262,31 @@ Table \ref{tab-sn} shows the average signal-to-noise ratio of BDE-47 in the fish
 
 
 \subsection{Discussion}
+\setcounter{figure}{23}
+The mass spectra for the compounds BDE-47, PBB-77 and `2-\ce{HCH} shown in figures 3,4 and 5 respectively. And the identification of its corresponding molecular ion (M+) is illustrated in figures 24, 25 and 26, except that they have an extra positive charge in the molecule. Note that the figures were taken from the website PubChem [The PubChem Project. https://pubchem.ncbi.nlm.nih.gov/ (accessed Dec 11, 2018)].
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\textwidth]{bde-47.png}
+	\caption{Molecular structure of BDE-47}
+	\label{fig-bde}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\textwidth]{pbb-77.png}
+	\caption{Molecular structure of PBB-77}
+	\label{fig-pbb}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1\textwidth]{lindane.png}
+	\caption{Molecular structure of `2-\ce{HCH}}
+	\label{fig-lindane}
+\end{figure}
+
+As it can be seen in figures 
 
 %----------------------------------------------------------------------------------------
 %	SECTION 5 (BIBLIOGRAPHY)
