done report on gc-ms!

--- a/labs/gc-ms/gc-ms.tex
+++ b/labs/gc-ms/gc-ms.tex
@@ -20,7 +20,7 @@
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
 
-\title{Analysis and Quantification of 2,2',4,4'-Tetrabromodiphenyl Ether using Gas Chromatography - Electron Ionization, Coupled with a Low-Resolution Mass Spectrometry in the Selected Ion Monitoring \\ CHEM 4303 \\ Analytical Separations} % Title
+\title{Analysis and Quantification of 2,2',4,4'-Tetrabromodiphenyl Ether using Gas Chromatography - Electron Ionization, Coupled with a Low-Resolution Mass Spectrometry in Selected Ion Monitoring Mode \\ CHEM 4303 \\ Analytical Separations} % Title
 
 \author{Robby \textsc{Renz}} % Author name
 
@@ -44,7 +44,7 @@
 %----------------------------------------------------------------------------------------
 
 \begin{abstract}
-	Gas chromatography - electron ionization mass spectrometry in the selected ion monitoring (GC/EI-MS-SIM) was used to detect and quantify the amount of BDE-47 in fish oil. Initially, the mass spectrum and total ion chromatogram was obtained for the analyte in question, BDE-47, the internal standard PBB-77 and the recovery standard `2-\ce{HCH}. Afterwards, 2 samples of fish oil was prepared using solid-phase extraction. Finally, the fish samples, blanks, BDE-47, PBB-77 and `2-\ce{HCH} underwent GC/EI-MS-SIM analysis, in which the ions being monitored were at a m/z of 326 and 486 for BDE-47, 470 and 310 for PBB-77, and 181 and 219 for `2-\ce{HCH}. Through calculations, it was realized that the average concentration of BDE-47 in the first sample of fish oil was  \SI{1.47e-5}{\ug/g} \num{+-1.07}\%, while the second sample of fish oil had a BDE-47 concentration of \SI{1.66e-5}{\ug/g} \num{+-13.75}\%.
+	Gas chromatography - electron ionization mass spectrometry in the selected ion monitoring (GC/EI-MS-SIM) was used to detect and quantify the amount of BDE-47 in fish oil. Initially, the mass spectrum and total ion chromatogram was obtained for the analyte in question, BDE-47, the internal standard PBB-77 and the recovery standard `2-\ce{HCH}. Afterwards, 2 samples of fish oil was prepared using solid-phase extraction. Finally, the fish samples, blanks, BDE-47, PBB-77 and `2-\ce{HCH} underwent GC/EI-MS-SIM analysis, in which the ions being monitored were at a m/z of 326 and 486 for BDE-47, 470 and 310 for PBB-77, and 181 and 219 for `2-\ce{HCH}. Through calculations, it was realized that the average concentration of BDE-47 in the first sample of fish oil was \SI{1.47e-5}{\ug/g} \num{+-1.07}\%, while the second sample of fish oil had a BDE-47 concentration of \SI{1.66e-5}{\ug/g} \num{+-13.75}\%.
 \end{abstract}
 \newpage
 
@@ -82,7 +82,7 @@ In the first week of the experiment, a (normalized) full scan spectrum was obtai
 
 In the second week of the experiment, two samples of fish oil were prepared by adding \SI{2}{\mu{}g/mL} of PBB-77 as the internal standard to the sample, and then having it undergo solid-phase extraction in order to extract lipids. Afterwards, the majority of the solvent was then removed from the sample through rotary evaporation.
 
-In the last week of the experiment, a calibration solution was produced by adding each of BDE-47 and PBB-77, at a volume of \SI{10}{\mu{}L}, to a \SI{0.5}{mL} of isooctane contained in an auto sampler vial, and it was diluted all the way to \SI{1.0}{mL} with the solvent. \SI{50}{\mu{}L} of `2-\ce{HCH} was added to the calibration solution, while \SI{10}{\mu{}L} was added to the fish samples that was prepared last week. Finally, the GC-MS was set to scan only two ions per analyte, the parameters that was selected is shown in table \ref{tab-para}. Refer to table ref to see which 2 ions was monitored.
+In the last week of the experiment, a calibration solution was produced by adding each of BDE-47 and PBB-77, at a volume of \SI{10}{\mu{}L}, to a \SI{0.5}{mL} of isooctane contained in an auto sampler vial, and it was diluted all the way to \SI{1.0}{mL} with the solvent. \SI{50}{\mu{}L} of `2-\ce{HCH} was added to the calibration solution, while \SI{10}{\mu{}L} was added to the fish samples that was prepared last week. Finally, the GC-MS was set to scan only two ions per analyte, the parameters that was selected is shown in table \ref{tab-para}.
 
 %----------------------------------------------------------------------------------------
 %	SECTION 4
@@ -91,7 +91,7 @@ In the last week of the experiment, a calibration solution was produced by addin
 \section{Results and Discussion}
 
 \subsection{Results}
-All of the GC/EI MS chromatograms are located in the `Chrmoatograms' subsection in the `Appendix' section, and all them are appropriately labelled.
+All of the GC/EI MS chromatograms are located in the `Chromatograms' subsection in the `Appendix' section, and all them are appropriately labelled.
 
 Table \ref{tab-para} shows the parameters that was set in the GC/EI-MS and the mass of the ions that was monitored.
 
@@ -263,7 +263,7 @@ Table \ref{tab-sn} shows the average signal-to-noise ratio of BDE-47 in the fish
 
 \subsection{Discussion}
 \setcounter{figure}{23}
-The mass spectra for the compounds BDE-47, PBB-77 and `2-\ce{HCH} shown in figures 3,4 and 5 respectively. And the identification of its corresponding molecular ion (M+) is illustrated in figures 24, 25 and 26, except that they have an extra positive charge in the molecule. Note that the figures were taken from the website PubChem [The PubChem Project. https://pubchem.ncbi.nlm.nih.gov/ (accessed Dec 11, 2018)].
+The mass spectra for the compounds BDE-47, PBB-77 and `2-\ce{HCH} shown in figures 3,4 and 5 respectively. And the identification of its corresponding molecular ion (M+) is illustrated in figures 24, 25 and 26, except that they have an extra positive charge in the molecule. Note that the figures were taken from the website PubChem [The PubChem Project. \\ https://pubchem.ncbi.nlm.nih.gov/ (accessed Dec 11, 2018)].
 
 \begin{figure}[h!]
 	\centering
@@ -286,7 +286,11 @@ The mass spectra for the compounds BDE-47, PBB-77 and `2-\ce{HCH} shown in figur
 	\label{fig-lindane}
 \end{figure}
 
-As it can be seen in figures 
+Table \ref{tab-para} shows the mass of the ions that were chosen to be monitored. These ions were chosen as the peaks of those ions did not overlap with the chosen peaks of the other ions. In addition, the abundance of the peaks was adequately high. Refer to figures 3, 4 and 5 for more clarity.
+
+The analysis of hexanes as blanks (figures 6 - 11) regarded that the contribution of BDE-47 is negligible, considering that at a retention time of around \SI{22.35}{min}, the abundance of the peak caused by BDE-47 is extremely low. So one can safely assume that the concentration of BDE-47 calculated was largely contributed to its presence in the oil of the fish.
+
+As it can clearly be seen in table \ref{tab-mean}, the average concentration of BDE-47 in the very first sample of fish oil was \SI{1.47e-5}{\ug/g} \num{+-1.07}\%, and in the second sample, the concentration of BDE-47 was \SI{1.66e-5}{\ug/g} \num{+-13.75}\%. Also, as evidenced in table \ref{tab-sn}, the average signal-to-noise (S/N) ratio during the analysis of the first fish oil sample was \num{93.65}, and it was \num{7.27} in the second analysis. This can be concluded that since the value of the S/N ratio for the second sample it not quite high, compared to the first sample, this experiment can be repeated multiple times until a reasonable value is obtained. This statement goes double when the standard deviation of the concentration of BDE-47 is also taken into account; its value is much higher than the first sample of fish oil.
 
 %----------------------------------------------------------------------------------------
 %	SECTION 5 (BIBLIOGRAPHY)
